<resources>
    <string name="app_name">KotlinApps</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="recalculate">Re-calcular</string>

    <string name="error">Error</string>


    <string name="title_bajo_peso">Bajo peso</string>
    <string name="descripcion_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_peso_normal">Normal</string>
    <string name="descripcion_peso_normal">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_sobrepeso">SobrePeso</string>
    <string name="descripcion_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="descripcion_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>


    <!--ToDoApp -->
    <string name="todo_title">Bienvenido</string>
    <string name="todo_categories">Categorias:</string>
    <string name="todo_tasks">Tareas:</string>
    <string name="todo_dialog_add_task">Añade la tarea:</string>
    <string name="todo_Business">Negocios</string>
    <string name="todo_Personal">Personal</string>
    <string name="todo_Others">Otros</string>
    <string name="todo_HomeWork">TAREA</string>
    <string name="ToDoApp">To Do App</string>
    <string name="IMC_APP">IMC App</string>
    <string name="Saludar_App">Saludar App</string>

    <!-- SuperHero App-->
    <string name="SuperHeroApp">Super Hero App</string>
    <string name="intelligence">Intelligence</string>
    <string name="stregth">Streght</string>
    <string name="speed">Speed</string>
    <string name="durability">Durability</string>
    <string name="power">Power</string>
    <string name="combat">Combat</string>
    <string name="Settings">Settings</string>
    <string name="DarkMode">Modo oscuro</string>
    <string name="Description_dark_mode">Activa el modo oscuro para un cambio visual</string>
    <string name="Bluetooth_mode">Activar Bluetooth</string>
    <string name="Description_bluetooth">Conecta periféricos sin cables</string>
    <string name="Volumen_Adjuste">Volume</string>
    <string name="Vibrate_mode">Also vibrate for calls</string>

</resources>