<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".MenuActivity">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaludarApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Saludar_App"
        android:background="@color/teal_200"
        android:layout_marginBottom="20dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnIMCApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IMC_APP"
        android:background="@color/background_button"
        android:layout_marginBottom="20dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnToDoApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:text="@string/ToDoApp"
        android:layout_marginBottom="20dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSuperHeroApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SuperHeroApp"
        android:background="@color/background_button"
        android:layout_marginBottom="20dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Settings"
        android:background="@color/purple_500"
        android:layout_marginBottom="20dp"
        />

</LinearLayout>